--- a/Roman Levkovych/SongKick/SongKick/View/Base.lproj/Main.storyboard
+++ b/Roman Levkovych/SongKick/SongKick/View/Base.lproj/Main.storyboard
@@ -6,104 +6,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Search-->
-        <scene sceneID="BUn-zF-uri">
-            <objects>
-                <viewController id="W4Y-qf-JxE" customClass="SearchArtistViewController" customModule="SongKick" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="gaR-Uf-Tv5">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pgD-cP-sCx">
-                                <rect key="frame" x="0.0" y="129" width="414" height="684"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AnE-QM-xPu">
-                                <rect key="frame" x="0.0" y="44" width="414" height="29"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <searchBar contentMode="redraw" placeholder="Search..." translatesAutoresizingMaskIntoConstraints="NO" id="yfM-KU-Obm">
-                                <rect key="frame" x="0.0" y="73" width="414" height="56"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="AnE-QM-xPu" firstAttribute="top" secondItem="TWx-IL-NF3" secondAttribute="top" id="2dc-7k-XIS"/>
-                            <constraint firstItem="yfM-KU-Obm" firstAttribute="trailing" secondItem="TWx-IL-NF3" secondAttribute="trailing" id="8bW-7f-goK"/>
-                            <constraint firstItem="pgD-cP-sCx" firstAttribute="top" secondItem="yfM-KU-Obm" secondAttribute="bottom" id="AJB-yt-6Oa"/>
-                            <constraint firstItem="yfM-KU-Obm" firstAttribute="leading" secondItem="TWx-IL-NF3" secondAttribute="leading" id="G2U-Ye-WyR"/>
-                            <constraint firstItem="AnE-QM-xPu" firstAttribute="leading" secondItem="TWx-IL-NF3" secondAttribute="leading" id="MTJ-dO-Km4"/>
-                            <constraint firstItem="yfM-KU-Obm" firstAttribute="top" secondItem="AnE-QM-xPu" secondAttribute="bottom" id="hS1-0y-NYv"/>
-                            <constraint firstItem="pgD-cP-sCx" firstAttribute="bottom" secondItem="TWx-IL-NF3" secondAttribute="bottom" id="ikN-UZ-RUH"/>
-                            <constraint firstItem="pgD-cP-sCx" firstAttribute="trailing" secondItem="TWx-IL-NF3" secondAttribute="trailing" id="xzT-pg-4ur"/>
-                            <constraint firstItem="TWx-IL-NF3" firstAttribute="trailing" secondItem="AnE-QM-xPu" secondAttribute="trailing" id="ygg-cW-G9l"/>
-                            <constraint firstItem="pgD-cP-sCx" firstAttribute="leading" secondItem="TWx-IL-NF3" secondAttribute="leading" id="ylJ-oP-SLe"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="TWx-IL-NF3"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Search" leftItemsSupplementBackButton="YES" id="uOS-v7-99z"/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <connections>
-                        <outlet property="foundArtistsTableView" destination="pgD-cP-sCx" id="LGJ-a1-Ndo"/>
-                        <outlet property="searchArtistSearchBar" destination="yfM-KU-Obm" id="jBr-6N-6mZ"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pUN-Sw-BYR" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3024.8000000000002" y="1022.3388305847077"/>
-        </scene>
-        <!--Favourites-->
-        <scene sceneID="rCS-A3-WhC">
-            <objects>
-                <viewController id="INi-pd-mtb" customClass="FavoutireArtistViewController" customModule="SongKick" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="48j-ot-nd9">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DKA-xQ-hpb">
-                                <rect key="frame" x="0.0" y="72" width="414" height="741"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <sections/>
-                            </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favourites" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pze-Xj-GNg">
-                                <rect key="frame" x="0.0" y="44" width="414" height="28"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="28" id="bE1-Cc-FuX"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="kEn-Qd-igx" firstAttribute="trailing" secondItem="Pze-Xj-GNg" secondAttribute="trailing" id="IIK-xm-nG2"/>
-                            <constraint firstItem="Pze-Xj-GNg" firstAttribute="top" secondItem="kEn-Qd-igx" secondAttribute="top" id="NPX-aH-t3j"/>
-                            <constraint firstItem="Pze-Xj-GNg" firstAttribute="leading" secondItem="kEn-Qd-igx" secondAttribute="leading" id="o1O-de-4nM"/>
-                            <constraint firstItem="DKA-xQ-hpb" firstAttribute="top" secondItem="Pze-Xj-GNg" secondAttribute="bottom" id="ob2-bo-cZR"/>
-                            <constraint firstItem="DKA-xQ-hpb" firstAttribute="bottom" secondItem="kEn-Qd-igx" secondAttribute="bottom" id="rbQ-9c-iR4"/>
-                            <constraint firstItem="DKA-xQ-hpb" firstAttribute="leading" secondItem="kEn-Qd-igx" secondAttribute="leading" id="ujJ-VS-yDe"/>
-                            <constraint firstItem="DKA-xQ-hpb" firstAttribute="trailing" secondItem="kEn-Qd-igx" secondAttribute="trailing" id="urk-Cj-WMq"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="kEn-Qd-igx"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Favourites" id="cyd-5E-AkT"/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <connections>
-                        <outlet property="favouriteArtistsTableView" destination="DKA-xQ-hpb" id="MFN-d1-ZVq"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Axy-ux-Hsj" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3024.8000000000002" y="126.38680659670166"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="afb-Tp-6OI">
             <objects>
@@ -117,8 +22,8 @@
                         <color key="selectedImageTintColor" red="0.97254901960784312" green="0.0" blue="0.27450980392156865" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="FhU-Ti-jBH" kind="relationship" relationship="viewControllers" id="XCo-pn-iu3"/>
-                        <segue destination="2Ak-bH-qty" kind="relationship" relationship="viewControllers" id="ats-Df-cIt"/>
+                        <segue destination="gOV-QH-lgh" kind="relationship" relationship="viewControllers" id="XCo-pn-iu3"/>
+                        <segue destination="LJZ-cA-O6j" kind="relationship" relationship="viewControllers" id="ats-Df-cIt"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o5l-aB-7hR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -142,45 +47,24 @@
             <point key="canvasLocation" x="-106" y="583"/>
         </scene>
         <!--Favourites-->
-        <scene sceneID="ALt-Eq-0Nj">
+        <scene sceneID="cZo-tx-2um">
             <objects>
-                <navigationController title="Favourites" automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="FhU-Ti-jBH" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="J0c-GY-ftB"/>
-                    <toolbarItems/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <navigationBar key="navigationBar" hidden="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ebg-fb-lm7">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="c9f-Op-arD">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </toolbar>
-                    <connections>
-                        <segue destination="INi-pd-mtb" kind="relationship" relationship="rootViewController" id="MT3-Kh-frR"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6Zz-W4-7hZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="Favourites" id="gOV-QH-lgh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="ITG-gc-ycD"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5ru-n7-oDS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2085.5999999999999" y="126.38680659670166"/>
+            <point key="canvasLocation" x="1126" y="1013"/>
         </scene>
         <!--Search-->
-        <scene sceneID="ds9-t9-fAk">
+        <scene sceneID="8Qf-XD-946">
             <objects>
-                <navigationController title="Search" automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="2Ak-bH-qty" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="search" id="h34-f3-xc4"/>
-                    <toolbarItems/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7WG-0T-Mde">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="W4Y-qf-JxE" kind="relationship" relationship="rootViewController" id="tfV-IN-gNO"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EJS-ub-Nhk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="Search" id="LJZ-cA-O6j" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="vsd-em-EhN"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jf7-Xz-IXd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2085.5999999999999" y="1022.3388305847077"/>
+            <point key="canvasLocation" x="647" y="1013"/>
         </scene>
     </scenes>
 </document>
