--- a/Roman Levkovych/SongKick/SongKick/View/Controllers/ArtistInfoViewController.xib
+++ b/Roman Levkovych/SongKick/SongKick/View/Controllers/ArtistInfoViewController.xib
@@ -44,7 +44,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eMe-1c-ruZ">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="eMe-1c-ruZ">
                     <rect key="frame" x="16" y="133.5" width="343" height="517.5"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
                     <sections/>
@@ -52,6 +52,9 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="eMe-1c-ruZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="2eM-Z9-cub"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eMe-1c-ruZ" secondAttribute="trailing" constant="16" id="3ki-eP-tTW"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="eMe-1c-ruZ" secondAttribute="bottom" constant="16" id="4Px-2A-Zfe"/>
                 <constraint firstItem="v7m-aW-gXZ" firstAttribute="height" secondItem="Hqc-LP-qlc" secondAttribute="height" id="Ftt-tY-8Nw"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="e4V-QA-GoS" secondAttribute="trailing" constant="16" id="L8O-b1-Rg9"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="eMe-1c-ruZ" secondAttribute="bottom" constant="16" id="T1H-4c-qSc"/>
@@ -59,15 +62,16 @@
                 <constraint firstItem="e4V-QA-GoS" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="VHx-z5-XeU"/>
                 <constraint firstItem="v7m-aW-gXZ" firstAttribute="top" secondItem="Hqc-LP-qlc" secondAttribute="top" id="Xe2-41-uRH"/>
                 <constraint firstItem="v7m-aW-gXZ" firstAttribute="leading" secondItem="Hqc-LP-qlc" secondAttribute="trailing" constant="8" id="bQK-PT-Hhc"/>
+                <constraint firstItem="eMe-1c-ruZ" firstAttribute="trailing" secondItem="e4V-QA-GoS" secondAttribute="trailing" id="glk-DW-r5u"/>
                 <constraint firstItem="e4V-QA-GoS" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="o0j-7i-6wV"/>
                 <constraint firstItem="Hqc-LP-qlc" firstAttribute="leading" secondItem="e4V-QA-GoS" secondAttribute="leading" id="oIs-vK-WG7"/>
                 <constraint firstItem="eMe-1c-ruZ" firstAttribute="leading" secondItem="e4V-QA-GoS" secondAttribute="leading" id="u9c-MI-1Fe"/>
-                <constraint firstItem="eMe-1c-ruZ" firstAttribute="trailing" secondItem="e4V-QA-GoS" secondAttribute="trailing" id="uWt-MF-2bS"/>
                 <constraint firstItem="eMe-1c-ruZ" firstAttribute="top" secondItem="Hqc-LP-qlc" secondAttribute="bottom" constant="16" id="vKZ-8S-TWu"/>
+                <constraint firstItem="eMe-1c-ruZ" firstAttribute="top" secondItem="Hqc-LP-qlc" secondAttribute="bottom" constant="16" id="xyc-Gm-9H7"/>
                 <constraint firstItem="Hqc-LP-qlc" firstAttribute="top" secondItem="e4V-QA-GoS" secondAttribute="bottom" constant="40" id="zNk-4D-9r3"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="68" y="152"/>
+            <point key="canvasLocation" x="132" y="141"/>
         </view>
     </objects>
 </document>
